--- a/NorAdrenaline/NorAdrenaline.vcxproj
+++ b/NorAdrenaline/NorAdrenaline.vcxproj
@@ -34,11 +34,11 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>C:\Program Files %28x86%29\Microsoft SDKs\Windows;..\NorAdrenaline\include\steam;$(IncludePath)</IncludePath>
+    <IncludePath>C:\Program Files %28x86%29\Microsoft SDKs\Windows;..\NorAdrenaline\include\steam;..\NorAdrenaline\Release;$(IncludePath)</IncludePath>
     <OutDir>D:\games\SteamLibrary\steamapps\common\Half-Life</OutDir>
     <TargetName>DemoPlayer</TargetName>
     <IntDir>..\trash</IntDir>
-    <LibraryPath>..\NorAdrenaline\MultiEmulator\Release;$(LibraryPath)</LibraryPath>
+    <LibraryPath>..\NorAdrenaline\Release;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -60,8 +60,8 @@
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalOptions>/SAFESEH:NO %(AdditionalOptions)</AdditionalOptions>
       <GenerateMapFile>true</GenerateMapFile>
-      <AdditionalDependencies>MultiEmulator.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>..\NorAdrenaline\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>direct path to \NorAdrenaline\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
